[gd_scene load_steps=41 format=2]

[ext_resource path="res://Sprites/Button1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Crow.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Button4.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Button3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Textbox.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Button2.png" type="Texture" id=7]
[ext_resource path="res://Font/MISTRAL.TTF" type="DynamicFontData" id=8]
[ext_resource path="res://Sprites/Buildings.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Sky.png" type="Texture" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=6]
size = 45
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="Animation" id=13]
resource_name = "event"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Barn/Button1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.79, 0.79 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Plantation/Button2:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.98, 0.98 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Upgrades/Button3:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.98, 0.98 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("next_day/Button4:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.98, 0.98 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Barn/ActionA:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.02 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Plantation/ActionA2:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.02 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Upgrades/ActionA3:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.02 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("next_day/ActionA4:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 1.02 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "event"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Barn:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 620, 111 ), Vector2( 928, 111 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Plantation:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 566, 215 ), Vector2( 874, 215 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("next_day:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 48.8907, 97.2066 ), Vector2( -170.109, 97.2066 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Upgrades:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 651.335, 281 ), Vector2( 959.335, 281 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "event2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Barn:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 928, 111 ), Vector2( 620, 111 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Plantation:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 874, 215 ), Vector2( 566, 215 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("next_day:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -170.109, 97.2066 ), Vector2( 48.8907, 97.2066 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Upgrades:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 959.335, 281 ), Vector2( 651.335, 281 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "event"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Back_button/Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -169.109, 97.2066 ), Vector2( 51.8907, 97.2066 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "event2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Back_button/Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 51.8907, 97.2066 ), Vector2( -169.109, 97.2066 ) ]
}

[sub_resource type="Animation" id=27]
resource_name = "event"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Back_button/Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -169.109, 97.2066 ), Vector2( 51.8907, 97.2066 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "event2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Back_button/Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 51.8907, 97.2066 ), Vector2( -169.109, 97.2066 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "event"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Back_button/Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -169.109, 97.2066 ), Vector2( 51.8907, 97.2066 ) ]
}

[sub_resource type="Animation" id=30]
resource_name = "event2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("../Back_button/Back:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 51.8907, 97.2066 ), Vector2( -169.109, 97.2066 ) ]
}

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=23]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="DynamicFont" id=14]
size = 40
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=15]
size = 24
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=16]
size = 40
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=17]
resource_name = "event"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Day:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.6491, -14.6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Money:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -15.1, -16.1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Power:rect_rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -29.0916, -30.1 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -32.8057, -33.3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Money:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.01, 1.01 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Day:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.01, 1.01 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Power:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.01, 1.01 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ColorRect:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.01, 1.01 ) ]
}

[sub_resource type="DynamicFont" id=19]
size = 32
outline_color = Color( 1, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=18]
resource_name = "event"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Textbox:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Textbox:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.98, 0.98 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Crow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Crow:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -1.0 ]
}

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 840.0
margin_bottom = 525.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Discs" type="Node" parent="."]

[node name="Buildings" type="Sprite" parent="Discs"]
position = Vector2( 397.582, 790.183 )
texture = ExtResource( 9 )

[node name="Sky" type="Sprite" parent="Discs"]
position = Vector2( 392.847, 808.596 )
rotation = -0.00170684
texture = ExtResource( 10 )

[node name="Button_main" type="Node" parent="."]

[node name="Barn" type="Button" parent="Button_main"]
margin_left = 620.0
margin_top = 111.0
margin_right = 821.998
margin_bottom = 156.0
rect_rotation = -18.165
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button1" type="Sprite" parent="Button_main/Barn"]
position = Vector2( 97.8414, 28.2073 )
rotation = 0.160929
scale = Vector2( 0.79, 0.79 )
texture = ExtResource( 1 )

[node name="ActionA" type="Label" parent="Button_main/Barn"]
margin_left = 67.3085
margin_top = -12.0151
margin_right = 183.309
margin_bottom = 33.9849
rect_rotation = -4.08805
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Barn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plantation" type="Button" parent="Button_main"]
margin_left = 566.0
margin_top = 215.0
margin_right = 740.0
margin_bottom = 250.0
rect_rotation = -19.5422
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 9 )
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button2" type="Sprite" parent="Button_main/Plantation"]
position = Vector2( 95.1124, 12.6691 )
rotation = 0.357378
scale = Vector2( 0.98, 0.98 )
texture = ExtResource( 7 )

[node name="ActionA2" type="Label" parent="Button_main/Plantation"]
margin_left = 23.5134
margin_top = -25.7068
margin_right = 184.513
margin_bottom = 20.2932
rect_rotation = 4.91988
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Plantation"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrades" type="Button" parent="Button_main"]
margin_left = 651.335
margin_top = 281.0
margin_right = 825.333
margin_bottom = 316.0
rect_rotation = -22.5711
custom_styles/hover = SubResource( 10 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 11 )
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button3" type="Sprite" parent="Button_main/Upgrades"]
position = Vector2( 81.1341, 12.2735 )
rotation = 0.243725
scale = Vector2( 0.98, 0.98 )
texture = ExtResource( 5 )

[node name="ActionA3" type="Label" parent="Button_main/Upgrades"]
margin_left = 24.7143
margin_top = -18.17
margin_right = 141.714
margin_bottom = 27.83
rect_rotation = 4.91988
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Upgrades"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_day" type="Button" parent="Button_main"]
margin_left = 48.8907
margin_top = 97.2066
margin_right = 186.89
margin_bottom = 147.207
rect_rotation = 30.7538
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 12 )
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button4" type="Sprite" parent="Button_main/next_day"]
position = Vector2( 74.3566, 23.1131 )
rotation = -0.451966
scale = Vector2( 0.98, 0.98 )
texture = ExtResource( 4 )

[node name="ActionA4" type="Label" parent="Button_main/next_day"]
margin_left = 13.8915
margin_top = -9.76222
margin_right = 146.891
margin_bottom = 36.2378
rect_rotation = -4.33678
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Next Day"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="Button_main"]
anims/event = SubResource( 13 )

[node name="anim_button_change" type="AnimationPlayer" parent="Button_main"]
anims/event = SubResource( 20 )
anims/event2 = SubResource( 21 )

[node name="Button_barn" type="Node" parent="."]

[node name="anim_barn" type="AnimationPlayer" parent="Button_barn"]
anims/event = SubResource( 25 )
anims/event2 = SubResource( 26 )

[node name="Button_plantation" type="Node" parent="."]

[node name="anim_plantation" type="AnimationPlayer" parent="Button_plantation"]
anims/event = SubResource( 27 )
anims/event2 = SubResource( 28 )

[node name="Button_upgrades" type="Node" parent="."]

[node name="anim_upgrades" type="AnimationPlayer" parent="Button_upgrades"]
anims/event = SubResource( 29 )
anims/event2 = SubResource( 30 )

[node name="Back_button" type="Node" parent="."]

[node name="Back" type="Button" parent="Back_button"]
margin_left = -169.109
margin_top = 97.2066
margin_right = -31.11
margin_bottom = 147.207
rect_rotation = 30.7538
custom_styles/focus = SubResource( 22 )
custom_styles/disabled = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
expand_icon = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button4" type="Sprite" parent="Back_button/Back"]
position = Vector2( 74.3566, 23.1131 )
rotation = -0.451966
scale = Vector2( 0.98, 0.98 )
texture = ExtResource( 4 )

[node name="ActionA4" type="Label" parent="Back_button/Back"]
margin_left = 13.7453
margin_top = -8.98334
margin_right = 146.745
margin_bottom = 37.0167
rect_rotation = -4.33678
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="Node" parent="."]

[node name="Day" type="Label" parent="HUD"]
margin_left = 682.014
margin_top = 31.1889
margin_right = 785.014
margin_bottom = 72.1889
rect_rotation = -15.6491
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Day: 66"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="HUD"]
margin_left = 89.0969
margin_top = 74.3331
margin_right = 249.097
margin_bottom = 115.333
rect_rotation = -15.1
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "M: 666666666666666"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Power" type="Label" parent="HUD"]
margin_left = 73.1026
margin_top = 40.2855
margin_right = 233.103
margin_bottom = 81.2855
rect_rotation = -29.0916
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "P: 35"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_left = 10.5295
margin_top = 19.171
margin_right = 37.5295
margin_bottom = 128.171
rect_rotation = -32.8057
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="HUD"]
anims/event = SubResource( 17 )

[node name="Dialog" type="Node" parent="."]

[node name="Textbox" type="Sprite" parent="Dialog"]
position = Vector2( 416, 418.894 )
scale = Vector2( 0.98, 0.98 )
texture = ExtResource( 6 )

[node name="Crow" type="Sprite" parent="Dialog"]
position = Vector2( 133, 296.894 )
scale = Vector2( 1.05, 1.05 )
texture = ExtResource( 3 )

[node name="Text" type="Label" parent="Dialog"]
margin_left = 118.467
margin_top = 394.029
margin_right = 659.467
margin_bottom = 463.029
rect_rotation = -1.22167
rect_scale = Vector2( 1.00825, 1.00825 )
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Hi! This is the first concept of our game for Kindred Games Community Jam #8"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="Dialog"]
anims/event = SubResource( 18 )

[connection signal="pressed" from="Button_main/Barn" to="." method="_on_Barn_pressed"]
[connection signal="pressed" from="Button_main/Plantation" to="." method="_on_Plantation_pressed"]
[connection signal="pressed" from="Button_main/Upgrades" to="." method="_on_Upgrades_pressed"]
[connection signal="pressed" from="Back_button/Back" to="." method="_on_Back_pressed"]
